[project]
name = "f0-extraction"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "npkk", email = "kob4.nemu@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "setuptools>=75.1.0",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "audioflux>=0.1.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/f0_extraction"]
